welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:7: error: '(' expected but '{' found.
  } else if {you<=2 | date <=2
            ^dateFashion:13: error: illegal start of simple expression
} 
^